# pallet-emotes

./: Cargo.toml
cli/: index.js  package.json  unicodes.txt
src/: lib.rs  mock.rs  tests.rs
src/emotes/: mapping.rs  mod.rs  tests.rs
src/emotes/mapping/: mapping.json  mapping.rs  mod.rs  tests.rs
src/emotes/nft_storage/: mod.rs  nft_storage.rs  tests.rs
